Layout fixes + minor refactoring + removing warnings